@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/11
+	* Modified status_get_sc_def to handle both rate and tick reductions. This
+	  way it can take care of the fact that curse rate/duration reductions are
+	  not reduced by the same stats. Curse duration is now reduced by vit.
+	  [Skotlex]
 	* Removed an ugly cast in socket.c
 	* Fixed Makefile (-Wno-unused-parameter was added twice with gcc4) [Toms]
 2007/04/10
